fixed gapping width in create job form page 4

--- a/internify/src/components/molecules/styles/InputFormContactDetails.css
+++ b/internify/src/components/molecules/styles/InputFormContactDetails.css
@@ -7,6 +7,6 @@
 }
 
 .input_contact_row_i-form-alt {
-  width: 75%;
+  width: 100%;
   height: 150%;
 }
